2006-04-30  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/Unit.cs (CreateSprite): implement.

	* SCSharp/SCSharp.UI/GameScreen.cs (PlaceInitialUnits): use Unit
	everywhere.

	* SCSharp/SCSharp.UI/Sprite.cs (.ctor): add a little more info to
	the spew.

	* SCSharp/SCSharp.UI/GlobalResources.cs (ResourceLoader): remove
	spew.
	(LoadSingleThreaded): load without spawning off a worker thread.
	useful in tools and tests.

2006-04-10  Chris Toshok  <toshok@hungry.com>

	* Makefile (VERSION): bump to 0.0000002.

2006-04-10  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/OkCancelDialog.cs: use 254,0 for
	translucent,transparent.

	* SCSharp/SCSharp.UI/OkDialog.cs: same.

	* SCSharp/SCSharp.UI/EntryDialog.cs: same.

2006-04-10  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/GameModeDialog.cs (.ctor): set
	background_path to null, as we'll load it in ResourceLoader.
	(ResourceLoader): manually load the background, using its specific
	translucent/transparent indices.
	
	* SCSharp/SCSharp.UI/GuiUtil.cs (SurfaceFromStream): always
	use our managed Pcx loader.
	(SurfaceFromStream): for the Stream,bool overload, pass in 252,0
	for translucent,transparent, respectively.
	(SurfaceFromStream): for the Stream overload, pass -1,-1.
	
	* SCSharp/SCSharp.UI/UIScreen.cs (ResourceLoader): pass -1,-1
	to the Pcx.ReadFromStream calls.

	* SCSharp/SCSharp.UI/CreditsScreen.cs (ResourceLoader): pass
	-1,-1 to the Pcx.ReadFromStream calls.

	* SCSharp/SCSharp.UI/Pcx.cs (ReadFromStream): allow the
	passing in of translucent/transparent indices.

	* SCSharp/SCSharp.Mpq/Bin.cs (ElementFlags): include the
	unknown flages as Unknown/Unused.

2006-04-10  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/ReadyRoomScreen.cs: first pass.

	* SCSharp/SCSharp.UI/Builtins.cs: add ready room builtins.

2006-04-10  Chris Toshok  <toshok@hungry.com>

	* SCSharp/SCSharp.UI/ListBoxElement.cs: track cursor when
	list becomes empty/non-empty.  Set it initially to -1.
