@@ -1,3 +1,8 @@
+2006-05-01  Chris Toshok  <toshok@ximian.com>
+
+	* SCSharp/SCSharp.Mpq/Mpq.cs: Make GetStreamForResource public so
+	it can be used to extract files from mpq archives.
+
 2006-04-30  Chris Toshok  <toshok@hungry.com>
 
 	* SCSharp/SCSharp.UI/Unit.cs (CreateSprite): implement.
